--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-layout: landing
 title: Home
+layout: landing
 ---
 
-Space Trader INDEX {{ site.title }}
+Space Trader INDEX | {{ site.title }}
